<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".FormActivity">
    <TextView
        style="@style/ActivityTitle"
        android:text="@string/formulario"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/label_nombre"
        />
    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName"
        android:hint="@string/edit_nombre"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnGuardarNombre"
        style="@style/ButtonPrimary"
        android:layout_marginBottom="30dp"
        android:onClick="progressFormularioOnClick"
        android:text="@string/guardar" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ProgressBar

            android:id="@+id/progressFormulario"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progress="0"
            android:max="100"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:text="0"
            android:visibility="invisible"
            />
    </RelativeLayout>

</LinearLayout>